peview: Add raw sections, Add raw prodid hash, Add unused header bytes, Disable PE directory rva highlighting

--- a/tools/peview/peview.rc
+++ b/tools/peview/peview.rc
@@ -410,11 +410,13 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSM
 CAPTION "ProdID"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_TABSTOP,0,38,300,242
+    CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_TABSTOP,0,52,300,228
     LTEXT           "Checksum:",IDC_STATIC,7,7,38,8
     EDITTEXT        IDC_PRODCHECKSUM,58,7,217,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    LTEXT           "Hash:",IDC_STATIC,7,21,38,8
+    LTEXT           "Hash (raw):",IDC_STATIC,7,21,38,8
     EDITTEXT        IDC_PRODHASH,58,21,217,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    LTEXT           "Hash:",IDC_STATIC,7,35,38,8
+    EDITTEXT        IDC_PRODHASH2,58,35,217,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
 END
 
 IDD_PEDEBUG DIALOGEX 0, 0, 300, 280
