--- a/tools/peview/peview.vcxproj
+++ b/tools/peview/peview.vcxproj
@@ -382,6 +382,10 @@
     <ClCompile Include="settings.c" />
     <ClCompile Include="ssdeep\fuzzy.c" />
     <ClCompile Include="streams.c" />
+    <ClCompile Include="tlsh\tlsh.cpp" />
+    <ClCompile Include="tlsh\tlsh_impl.cpp" />
+    <ClCompile Include="tlsh\tlsh_util.cpp" />
+    <ClCompile Include="tlsh\tlsh_wrapper.cpp" />
     <ClCompile Include="tlsprp.c" />
   </ItemGroup>
   <ItemGroup>
@@ -394,6 +398,11 @@
     <ClInclude Include="include\prpsh.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="ssdeep\fuzzy.h" />
+    <ClInclude Include="tlsh\tlsh.h" />
+    <ClInclude Include="tlsh\tlsh_impl.h" />
+    <ClInclude Include="tlsh\tlsh_util.h" />
+    <ClInclude Include="tlsh\win_version.h" />
+    <ClInclude Include="tlsh\tlsh_wrapper.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="peview.rc" />
