--- a/tools/peview/peview.vcxproj.filters
+++ b/tools/peview/peview.vcxproj.filters
@@ -28,6 +28,12 @@
     <Filter Include="Header Files\ssdeep">
       <UniqueIdentifier>{d4f51c2b-a25b-4233-a6e5-5b08792ed641}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\tlsh">
+      <UniqueIdentifier>{349c41fa-6b58-4e7f-a61e-0b384b92ca8f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\tlsh">
+      <UniqueIdentifier>{dba25291-2fb0-40d7-a890-b04b8a285641}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.c">
@@ -144,6 +150,18 @@
     <ClCompile Include="hashprp.c">
       <Filter>Source Files\Pages\Windows</Filter>
     </ClCompile>
+    <ClCompile Include="tlsh\tlsh.cpp">
+      <Filter>Source Files\tlsh</Filter>
+    </ClCompile>
+    <ClCompile Include="tlsh\tlsh_impl.cpp">
+      <Filter>Source Files\tlsh</Filter>
+    </ClCompile>
+    <ClCompile Include="tlsh\tlsh_util.cpp">
+      <Filter>Source Files\tlsh</Filter>
+    </ClCompile>
+    <ClCompile Include="tlsh\tlsh_wrapper.cpp">
+      <Filter>Source Files\tlsh</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\peview.h">
@@ -172,6 +190,21 @@
     </ClInclude>
     <ClInclude Include="ssdeep\fuzzy.h">
       <Filter>Header Files\ssdeep</Filter>
+    </ClInclude>
+    <ClInclude Include="tlsh\tlsh.h">
+      <Filter>Header Files\tlsh</Filter>
+    </ClInclude>
+    <ClInclude Include="tlsh\tlsh_impl.h">
+      <Filter>Header Files\tlsh</Filter>
+    </ClInclude>
+    <ClInclude Include="tlsh\tlsh_util.h">
+      <Filter>Header Files\tlsh</Filter>
+    </ClInclude>
+    <ClInclude Include="tlsh\tlsh_wrapper.h">
+      <Filter>Header Files\tlsh</Filter>
+    </ClInclude>
+    <ClInclude Include="tlsh\win_version.h">
+      <Filter>Header Files\tlsh</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
