--- a/plugins/NetworkTools/NetworkTools.rc
+++ b/plugins/NetworkTools/NetworkTools.rc
@@ -85,11 +85,13 @@ BEGIN
     GROUPBOX        "Ping statistics",IDC_ICMP_PANEL,7,92,315,52,0,WS_EX_TRANSPARENT
     LTEXT           "Average: 0ms",IDC_ICMP_AVG,13,104,73,8
     LTEXT           "Pings sent: 0",IDC_PINGS_SENT,91,104,88,8
-    LTEXT           "Bad replies: 0",IDC_BAD_HASH,187,104,90,8
+    LTEXT           "Bad replies: 0",IDC_BAD_HASH,188,104,90,8
     LTEXT           "Minimum: 0ms",IDC_ICMP_MIN,13,116,73,8
     LTEXT           "Pings lost: 0 (0%)",IDC_PINGS_LOST,91,116,88,8
     LTEXT           "Anon replies: 0",IDC_ANON_ADDR,188,116,87,8
     LTEXT           "Maximum: 0ms",IDC_ICMP_MAX,13,129,73,8
+    LTEXT           "Deviation: 0.00",IDC_ICMP_STDEV,91,129,73,8
+    LTEXT           "Variance: 0.00",IDC_ICMP_STVAR,188,129,73,8
 END
 
 IDD_TRACERT DIALOGEX 0, 0, 389, 212
