--- a/plugins/NetworkTools/NetworkTools.rc
+++ b/plugins/NetworkTools/NetworkTools.rc
@@ -90,8 +90,7 @@ BEGIN
     LTEXT           "Pings lost: 0 (0%)",IDC_PINGS_LOST,91,116,88,8
     LTEXT           "Anon replies: 0",IDC_ANON_ADDR,188,116,87,8
     LTEXT           "Maximum: 0 ms",IDC_ICMP_MAX,13,129,73,8
-    LTEXT           "Deviation: 0.00",IDC_ICMP_STDEV,91,129,73,8
-    LTEXT           "Variance: 0.00",IDC_ICMP_STVAR,188,129,73,8
+    LTEXT           "Deviation: 0.00 ms",IDC_ICMP_STDEV,91,129,73,8
 END
 
 IDD_TRACERT DIALOGEX 0, 0, 389, 212
