--- a/ProcessHacker/ProcessHacker.rc
+++ b/ProcessHacker/ProcessHacker.rc
@@ -175,7 +175,7 @@ CAPTION "About"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     ICON            IDI_PROCESSHACKER,IDC_STATIC,16,11,21,20
-    LTEXT           "Process Hacker",IDC_ABOUT_NAME,45,10,192,8
+    CONTROL         "Process Hacker",IDC_ABOUT_NAME,"SysLink",WS_TABSTOP,45,10,192,8
     LTEXT           "Licensed under the GNU GPL, v3.",IDC_STATIC,45,23,193,8
     LTEXT           "Copyright (c) 2008-2021",IDC_STATIC,45,36,80,8
     CONTROL         "Credits.",IDC_CREDITS,"SysLink",WS_TABSTOP,15,49,248,121
