Add CPU topology and latency to Sysinfo CPU graphs

--- a/ProcessHacker/ProcessHacker.rc
+++ b/ProcessHacker/ProcessHacker.rc
@@ -957,7 +957,7 @@ BEGIN
     LTEXT           "Graph layout",IDC_GRAPH_LAYOUT,0,22,315,82,NOT WS_VISIBLE
 END
 
-IDD_SYSINFO_CPUPANEL DIALOGEX 0, 0, 237, 86
+IDD_SYSINFO_CPUPANEL DIALOGEX 0, 0, 351, 86
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_SYSMENU
 EXSTYLE WS_EX_CONTROLPARENT
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
@@ -985,6 +985,15 @@ BEGIN
     RTEXT           "Static",IDC_ZINTERRUPTSDELTA_V,185,39,46,8,SS_ENDELLIPSIS
     RTEXT           "Static",IDC_ZDPCSDELTA_V,181,48,50,8,SS_ENDELLIPSIS
     RTEXT           "Static",IDC_ZSYSTEMCALLSDELTA_V,179,59,52,8,SS_ENDELLIPSIS
+    GROUPBOX        "Topology",IDC_STATIC,241,17,109,55
+    LTEXT           "Cores",IDC_STATIC,249,28,76,8
+    LTEXT           "Sockets",IDC_STATIC,249,38,26,8
+    LTEXT           "Logical processors",IDC_STATIC,249,48,58,8
+    LTEXT           "Latency",IDC_STATIC,249,58,60,8
+    RTEXT           "Static",IDC_ZCORES,305,28,40,8,SS_ENDELLIPSIS
+    RTEXT           "Static",IDC_ZSOCKETS,299,38,46,8,SS_ENDELLIPSIS
+    RTEXT           "Static",IDC_ZLOGICAL,314,48,31,8,SS_ENDELLIPSIS
+    RTEXT           "Static",IDC_ZLATENCY,293,58,52,8,SS_ENDELLIPSIS
 END
 
 IDD_SYSINFO_MEMPANEL DIALOGEX 0, 0, 358, 171
