--- a/tools/peview/peview.vcxproj
+++ b/tools/peview/peview.vcxproj
@@ -359,6 +359,7 @@
     <ClCompile Include="hashprp.c" />
     <ClCompile Include="layout.c" />
     <ClCompile Include="options.c" />
+    <ClCompile Include="peexceptprp.c" />
     <ClCompile Include="pesectionprp.c" />
     <ClCompile Include="pepogoprp.c" />
     <ClCompile Include="richprp.c" />
