Add window resize to GDI Handles window

--- a/ProcessHacker/ProcessHacker.rc
+++ b/ProcessHacker/ProcessHacker.rc
@@ -753,7 +753,7 @@ BEGIN
 END
 
 IDD_GDIHANDLES DIALOGEX 0, 0, 351, 307
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+STYLE DS_SETFONT | DS_FIXEDSYS | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 CAPTION "GDI Handles"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
