--- a/tools/peview/peview.rc
+++ b/tools/peview/peview.rc
@@ -65,6 +65,10 @@ BEGIN
 
     IDD_PEEXPORTS, DIALOG
     BEGIN
+        LEFTMARGIN, 3
+        RIGHTMARGIN, 297
+        TOPMARGIN, 3
+        BOTTOMMARGIN, 277
     END
 
     IDD_LIBEXPORTS, DIALOG
@@ -239,7 +243,9 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSM
 CAPTION "Exports"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_TABSTOP,0,0,300,280
+    CONTROL         "",IDC_SYMBOLTREE,"PhTreeNew",WS_CLIPSIBLINGS | WS_CLIPCHILDREN | 0x2,3,21,294,256,WS_EX_CLIENTEDGE
+    EDITTEXT        IDC_SYMSEARCH,156,3,141,14,ES_AUTOHSCROLL
+    PUSHBUTTON      "Options",IDC_SETTINGS,3,3,50,14,WS_DISABLED
 END
 
 IDD_LIBEXPORTS DIALOGEX 0, 0, 300, 280
@@ -292,6 +298,7 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     CONTROL         "",IDC_SYMBOLTREE,"PhTreeNew",WS_CLIPSIBLINGS | WS_CLIPCHILDREN | 0x2,3,21,295,256,WS_EX_CLIENTEDGE
     EDITTEXT        IDC_SYMSEARCH,157,3,141,14,ES_AUTOHSCROLL
+    PUSHBUTTON      "Options",IDC_SETTINGS,3,3,50,14,WS_DISABLED
 END
 
 IDD_PERESOURCES DIALOGEX 0, 0, 300, 280
