peview: Update imports tab layout, Add import RVA, Add imports search, Improve imports performance

--- a/tools/peview/peview.rc
+++ b/tools/peview/peview.rc
@@ -61,6 +61,10 @@ BEGIN
 
     IDD_PEIMPORTS, DIALOG
     BEGIN
+        LEFTMARGIN, 3
+        RIGHTMARGIN, 297
+        TOPMARGIN, 3
+        BOTTOMMARGIN, 277
     END
 
     IDD_PEEXPORTS, DIALOG
@@ -235,7 +239,9 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSM
 CAPTION "Imports"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_TABSTOP,0,0,300,280
+    CONTROL         "",IDC_SYMBOLTREE,"PhTreeNew",WS_CLIPSIBLINGS | WS_CLIPCHILDREN | 0x2,3,21,294,256,WS_EX_CLIENTEDGE
+    EDITTEXT        IDC_SYMSEARCH,156,3,141,14,ES_AUTOHSCROLL
+    PUSHBUTTON      "Options",IDC_SETTINGS,3,3,50,14,WS_DISABLED
 END
 
 IDD_PEEXPORTS DIALOGEX 0, 0, 300, 280
