--- a/tools/peview/peview.vcxproj.filters
+++ b/tools/peview/peview.vcxproj.filters
@@ -168,6 +168,12 @@
     <ClCompile Include="perelocprp.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="peprpwnd.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="chcol.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\peview.h">
