peview: Add new Headers tab, Improve pdb symbols sorting

--- a/tools/peview/peview.rc
+++ b/tools/peview/peview.rc
@@ -287,6 +287,14 @@ BEGIN
         TOPMARGIN, 7
         BOTTOMMARGIN, 220
     END
+
+    IDD_PEHEADERS, DIALOG
+    BEGIN
+        LEFTMARGIN, 3
+        RIGHTMARGIN, 297
+        TOPMARGIN, 3
+        BOTTOMMARGIN, 277
+    END
 END
 #endif    // APSTUDIO_INVOKED
 
@@ -643,6 +651,14 @@ BEGIN
     LTEXT           "Select the columns that will appear in the list.",IDC_MESSAGE,7,7,369,10
     EDITTEXT        IDC_SEARCH,7,33,129,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_FILTER,192,33,129,14,ES_AUTOHSCROLL
+END
+
+IDD_PEHEADERS DIALOGEX 0, 0, 300, 280
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Headers"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,3,3,294,274
 END
 
 
