Update about icon resource id

--- a/ProcessHacker/ProcessHacker.rc
+++ b/ProcessHacker/ProcessHacker.rc
@@ -174,7 +174,7 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_CENTER | WS_POPUP | WS_CAPTI
 CAPTION "About"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    ICON            IDI_PROCESSHACKER,IDC_STATIC,16,11,21,20
+    ICON            IDI_PROCESSHACKER,IDC_FILEICON,16,11,20,20
     CONTROL         "Process Hacker",IDC_ABOUT_NAME,"SysLink",WS_TABSTOP,45,10,192,8
     LTEXT           "Licensed under the GNU GPL, v3.",IDC_STATIC,45,23,193,8
     LTEXT           "Copyright (c) 2008-2021",IDC_STATIC,45,36,80,8
